--- a/gb/25/9/11/n14592086.md
+++ b/gb/25/9/11/n14592086.md
@@ -16,18 +16,12 @@
 <p>桃园市教育局表示，学生们的表现不只代表专业能力，更展现了迎向未来的信心与潜力。教育局会持续投入资源，支持技职教育，让更多孩子有机会在专业领域里发光，也希望让学生在校园里就能接轨产业，看见自己的未来。◇</p>
 <p>责任编辑：唐音</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/12/n13970989.md#1">成长TONE 元智大学资传系创意与专业能力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533756.md#1">杨梅分局义交中队常年训练 强化协勤提升专业能力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/23/n14558893.md#1">全台技能竞赛 屏东内埔农工汽车板金夺银</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/29/n14562762.md#1">中坜家商国服精工细作 夺全台技能竞赛第二名</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/10/n14591246.md#1">桃园辅导青年创业 “宜智科技”Erupture全球创客松第三名</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/10/n14591254.md#1">“伯公行桃园：客家伯公特展”登场 探索地方守护神</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14642571.md#1">北荣桃园分院提醒牙周病隐形危机   别错过治疗时机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14642563.md#1">全台家事类技艺竞赛    桃园市立中坜家商荣获佳绩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14642548.md#1">一岁男童急性肠胃炎抽蓄  大园警协助开道送医</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14642535.md#1">“静桃”大执法   龙潭警与监理及环保机关取缔噪音车</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/23/n10995753.md#1" target="_blank">九州：注定失败的共产主义</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/31/n11625277.md#1" target="_blank">法轮功真相传入太平洋热带岛国瓦努阿图</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/21/n9757183.md#1" target="_blank">杨宁： 中共谎言之“三三制政权共享”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/22/n2973029.md#1" target="_blank">千百度：是谁让他们沦为了残酷迫害中国人民的凶手？</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
